--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "chip8-emulator"
 version = "0.1.0"
-authors = ["Aggie Coding Club", "Teddy Heinen"]
+authors = ["Aggie Coding Club", "Teddy Heinen","Mark McConachie"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+piston = "0.49.0"
+piston2d-graphics = "0.35.0"
+pistoncore-glutin_window = "0.63.0"
+piston2d-opengl_graphics = "0.69.0"
